<resources>
    <string name="app_name">Med Journal</string>
    <string name="btn_add_med">add medicine</string>
    <string name="btn_bottom_nav_home">Home</string>
    <string name="btn_bottom_nav_measurements">Measurements</string>
    <string name="btn_botton_nav_medications">Medications</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_med_config_done">DONE</string>
    <string name="btn_med_select_next">NEXT</string>
    <string name="btn_plus">+</string>
    <string name="btn_register">Register</string>
    <string name="btn_select_photo">Select Photo</string>
    <string name="cv_medication_name">Medication Name</string>
    <string name="et_email">Email</string>
    <string name="et_login">Login</string>
    <string name="et_medication_name_hint">Enter medication name</string>
    <string name="et_medication_name_text">Vitamin A and D Softgel</string>
    <string name="et_password">Password</string>
    <string name="et_username">Username</string>
    <string name="format_time">HH:mm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="measurement_types_array">
        <item> Cholesterol level</item>
        <item> Heart Rate</item>
        <item> Blood Sugar</item>
        <item> Other </item>
    </string-array>
    <string-array name="medication_dosage">
        <item>pill</item>
        <item>cc</item>
        <item>mL</item>
        <item>drop</item>
        <item>teaspoon</item>
    </string-array>
    <string-array name="medication_frequency">
        <item>Once daily</item>
        <item>Twice daily</item>
        <item>3 times a day</item>
    </string-array>
    <string-array name="medication_schedule_duration">
        <item>Ongoing treatment</item>
        <item>number of days</item>
    </string-array>
    <string-array name="medicine_names">
        <item>Abilify</item>
        <item>Adderall</item>
        <item>Adderall XR</item>
        <item>Adrenaline</item>
        <item>Albuterol Sulfate</item>
        <item>Aldactone</item>
        <item>Allegra</item>
        <item>Ambien</item>
        <item>Amikin</item>
        <item>Amoxicillin</item>
        <item>Antivert</item>
        <item>Aricept</item>
        <item>Armour Thyroid</item>
        <item>Atarax</item>
        <item>Atenolol</item>
        <item>Ativan</item>
        <item>Atropine</item>
        <item>Atrovent HFA</item>
        <item>Augmentin</item>
        <item>Avapro</item>
        <item>Baclofen</item>
        <item>Bactrim</item>
        <item>Benadryl</item>
        <item>Bentyl</item>
        <item>Benzonatate</item>
        <item>Bumex</item>
        <item>Buspar</item>
        <item>Carafate</item>
        <item>Catapres</item>
        <item>Ceftin</item>
        <item>Celebrex</item>
        <item>Celexa</item>
        <item>Cialis</item>
        <item>Cipro</item>
        <item>Claritin</item>
        <item>Clindamycin</item>
        <item>Colchicine</item>
        <item>Concerta</item>
        <item>Coreg</item>
        <item>Coumadin</item>
        <item>Cozaar</item>
        <item>Crestor</item>
        <item>Cymbalta</item>
        <item>Cytomel</item>
        <item>Cytotec</item>
        <item>Depakote</item>
        <item>Desoxyn</item>
        <item>Desyrel</item>
        <item>Dexamethasone</item>
        <item>Diflucan</item>
        <item>Dilaudid</item>
        <item>Diovan</item>
        <item>Dobutamine</item>
        <item>Doryx</item>
        <item>Duoneb</item>
        <item>Effexor XR</item>
        <item>Elavil</item>
        <item>Eliquis</item>
        <item>Estrace</item>
        <item>Fioricet</item>
        <item>Flagyl</item>
        <item>Flexeril</item>
        <item>Flomax</item>
        <item>Flonase</item>
        <item>Focalin XR</item>
        <item>Fortamet</item>
        <item>Fosamax</item>
        <item>Glucotrol</item>
        <item>Haldol</item>
        <item>Hydrocortisone</item>
        <item>Ibuprofen</item>
        <item>Imodium</item>
        <item>Imuran</item>
        <item>Inderal</item>
        <item>Indocin</item>
        <item>Keflex</item>
        <item>Keppra</item>
        <item>Ketoconazole Cream</item>
        <item>Klonopin</item>
        <item>Klor-Con</item>
        <item>Lamictal</item>
        <item>Lamisil</item>
        <item>Lasix</item>
        <item>Levaquin</item>
        <item>Levsin</item>
        <item>Lexapro</item>
        <item>Lexiscan</item>
        <item>Librax</item>
        <item>Lidoderm</item>
        <item>Librium</item>
        <item>Lipitor</item>
        <item>Lomotil</item>
        <item>Lopressor</item>
        <item>Lovaza</item>
        <item>Lovenox</item>
        <item>Lyrica</item>
        <item>Macrobid</item>
        <item>Mannitol IV</item>
        <item>Medrol</item>
        <item>Megace</item>
        <item>Merrem IV</item>
        <item>Methergine</item>
        <item>Minocin</item>
        <item>Mirapex</item>
        <item>Mobic</item>
        <item>MS Contin</item>
        <item>Naprelan</item>
        <item>Narcan</item>
        <item>Neurontin</item>
        <item>Nexium</item>
        <item>Nitrostat</item>
        <item>Norco</item>
        <item>Norco 5/325</item>
        <item>Normal Saline</item>
        <item>Norvasc</item>
        <item>Norvir</item>
        <item>Nystatin Cream</item>
        <item>Nystatin Oral</item>
        <item>Omnicef</item>
        <item>Oxycontin</item>
        <item>Paxil</item>
        <item>Penicillin VK</item>
        <item>Pepcid</item>
        <item>Percocet</item>
        <item>Phenergan</item>
        <item>Plaquenil</item>
        <item>Plavix</item>
        <item>Pravachol</item>
        <item>Prilosec</item>
        <item>Prinivil</item>
        <item>ProAir</item>
        <item>Proamatine</item>
        <item>Prolia</item>
        <item>Prometrium</item>
        <item>Protonix</item>
        <item>Proscar</item>
        <item>Prozac</item>
        <item>Pyridium</item>
        <item>Ranexa</item>
        <item>Remeron</item>
        <item>Remicade</item>
        <item>Requip</item>
        <item>Restoril</item>
        <item>Risperdal</item>
        <item>Ritalin</item>
        <item>Robaxin</item>
        <item>Rocephin</item>
        <item>Roxicodone</item>
        <item>Seroquel</item>
        <item>Silvadene</item>
        <item>Sinemet</item>
        <item>Sinequan</item>
        <item>Singulair</item>
        <item>Skelaxin</item>
        <item>Soma</item>
        <item>Spiriva</item>
        <item>Subutex</item>
        <item>Suprax</item>
        <item>Synthroid</item>
        <item>Tapazole</item>
        <item>Tegretol</item>
        <item>Tessalon</item>
        <item>Tofranil</item>
        <item>Toprol</item>
        <item>Toprol XR</item>
        <item>Toradol</item>
        <item>Triamcinolone Cream</item>
        <item>Trileptal</item>
        <item>Tussionex</item>
        <item>Tylenol</item>
        <item>Tylenol with Codeine</item>
        <item>Ultracet</item>
        <item>Ultram</item>
        <item>Valium</item>
        <item>Valtrex</item>
        <item>Viagra</item>
        <item>Vicodin</item>
        <item>Vistaril</item>
        <item>Vitamin A</item>
        <item>Vitamin B</item>
        <item>Vitamin C</item>
        <item>Vitamin D</item>
        <item>Vitamin K1</item>
        <item>Voltaren</item>
        <item>Voltaren Gel</item>
        <item>Vyvanse</item>
        <item>Wellbutrin</item>
        <item>Wellbutrin XL</item>
        <item>Xanax</item>
        <item>Xenical</item>
        <item>Xyzal</item>
        <item>Zanaflex</item>
        <item>Zantac</item>
        <item>Zithromax</item>
        <item>Zofran</item>
        <item>Zoloft</item>
        <item>Zosyn</item>
        <item>Zovirax</item>
        <item>Zyprexa</item>
        <item>Zyrtec</item>
    </string-array>
    <string-array name="period_choices_for_measurement_graphs">
        <item> Last 24 hours </item>
        <item> Last 3 days </item>
        <item> Last week </item>
        <item> Last month </item>
        <item> Last 3 months </item>
        <item> Last year </item>
    </string-array>
    <string name="radio_number_of_days_changed">%s days</string>
    <string name="radio_text_number_of_days">number of days</string>
    <string name="radio_text_number_of_days_with_colon">number of days:</string>
    <string name="radio_text_ongoing">Ongoing treatment</string>
    <string name="sign_out">Sign Out</string>
    <string name="test_hello_world">Hello World</string>
    <string name="test_number">14</string>
    <string name="test_username">John Doe</string>
    <string name="title_add_medicine">Add Medicine</string>
    <string name="title_measurement_visualization">Measurement Visualization</string>
    <string name="title_more_details">More Details</string>
    <string name="title_select_days">Select days of the week:</string>
    <string name="title_set_number_of_days">Set number of days (from start date)</string>
    <string name="toast_at_least_one_day">Please select at least one day of the week</string>
    <string name="toast_empty_email">Please enter text in email.</string>
    <string name="toast_empty_password">Please enter text in password.</string>
    <string name="toast_empty_username">Please enter text in username.</string>
    <string name="toast_enter_medname">Please enter medication name</string>
    <string name="toast_failed_to_create_user">Failed to create user: </string>
    <string name="toast_no_selection">No Selection</string>
    <string name="trick_days">E</string>
    <string name="trick_duration">n</string>
    <string name="tv_11_oct_2019">11 oct 2019</string>
    <string name="tv_12_nov_2019">12 Nov 2019</string>
    <string name="tv_8AM">8:00 AM</string>
    <string name="tv_add_measurement">Add Measurement</string>
    <string name="tv_already_have_an_account">Already have an account?</string>
    <string name="tv_back_to_registration">Does not have an account? Register now.</string>
    <string name="tv_days">Days</string>
    <string name="tv_days_interval">days interval</string>
    <string name="tv_duration">Duration</string>
    <string name="tv_e_g_8">e.g. 8</string>
    <string name="tv_every_day">Every day</string>
    <string name="tv_every_other_day">Every other day</string>
    <string name="tv_friday">Friday</string>
    <string name="tv_measurements">Measurements</string>
    <string name="tv_medicine_name">Medication Name</string>
    <string name="tv_monday">Monday</string>
    <string name="tv_my_measurements">My Measurements</string>
    <string name="tv_no_matching">No matching found.</string>
    <string name="tv_ok">OK</string>
    <string name="tv_one">1</string>
    <string name="tv_reminder_time_input">Take 1 pill at 08:00</string>
    <string name="tv_reminder_times_title">Reminder Times</string>
    <string name="tv_saturday">Saturday</string>
    <string name="tv_schedule_title">Schedule</string>
    <string name="tv_specific_days">Specific days of the week</string>
    <string name="tv_start_date">Start date:</string>
    <string name="tv_started_date">started date:</string>
    <string name="tv_submit_measurement_data">Submit Measurement Data</string>
    <string name="tv_sunday">Sunday</string>
    <string name="tv_take">Take</string>
    <string name="tv_take_2_pills">Take 2 pills</string>
    <string name="tv_take_pill">Take %s %s at %s</string>
    <string name="tv_take_pill_plural">Take %s %ss at %s</string>
    <string name="tv_thursday">Thursday</string>
    <string name="tv_tuesday">Tuesday</string>
    <string name="tv_type_of_measurement">New Measurement</string>
    <string name="tv_value">Value:</string>
    <string name="tv_wednesday">Wednesday</string>
    <string name="tv_your_health_statistics">%s statistics:</string>
    <string name="measurement_viz_start_limit">From: %s</string>
    <string name="measurement_viz_end_limit">Now</string>
</resources>