<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_dark_gray"
        android:title="@string/btn_bottom_nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_medications"
        android:enabled="true"
        android:icon="@drawable/ic_medications_dark_gray"
        android:title="@string/btn_botton_nav_medications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_measurements"
        android:enabled="true"
        android:icon="@drawable/ic_measurements_dark_gray"
        android:title="@string/btn_bottom_nav_measurements"
        app:showAsAction="ifRoom" />

</menu>