<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/med_item_event_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_8AM"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/med_item_event_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_medicine_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/med_item_event_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_take_2_pills"
        android:textSize="14sp" />


</LinearLayout>

