<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".home.MeasurementsFragment">

    <TextView
        android:id="@+id/measurement_activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_your_health_statistics"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <Spinner
            android:id="@+id/period_for_graph_spinner"
            android:layout_width="250dp"
            android:layout_height="30dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" />


    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/measurement_lineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/earliest_measurement_graphed_tv"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="start"
            android:text="@string/measurement_viz_start_limit"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/last_measurement_graphed_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/measurement_viz_end_limit"
            android:gravity="end"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/measurement_history_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" />

</LinearLayout>