<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/medication_reminder_time_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_reminder_time_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_reminder_times_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/medication_reminder_time_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_reminder_time_title"
                    android:layout_marginTop="16dp"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/medication_schedule_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_schedule_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tv_schedule_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/med_config_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_med_config_done" />
    </LinearLayout>
</ScrollView>